traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:7: error: not found: value Direction
    if (getDirection() == Direction.EST) {
                          ^TraversalZigZag:12: error: not found: value Direction
    if (getDirection() == Direction.OUEST) {
                          ^TraversalZigZag:13: error: not found: value ligneOUEST
      ligneOUEST(compteur, abscisse, ordonnee, hauteur, largeur)
      ^TraversalZigZag:20: error: not found: value Direction
  if (getDirection() == Direction.EST)
                        ^TraversalZigZag:21: error: not found: value ligneEST
    ligneEST(compteur, abscisse, ordonnee, hauteur, largeur)
    ^TraversalZigZag:22: error: not found: value Direction
  if (getDirection() == Direction.OUEST)
                        ^TraversalZigZag:23: error: not found: value ligneOUEST
    ligneOUEST(compteur, abscisse, ordonnee, hauteur, largeur)
    ^TraversalZigZag:31: error: reassignment to val
    abscisse = abscisse + 1
             ^TraversalZigZag:39: error: reassignment to val
    abscisse = abscisse - 1
             ^